[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/notebook.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/AvenuePixel-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GameUI.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/8bitlim.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
outline_color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
extra_spacing_bottom = -3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 6
outline_size = 1
outline_color = Color( 0.639216, 0.188235, 0.701961, 1 )
extra_spacing_bottom = -3
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 4 )

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -74.315, -23.847 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 122.0
margin_top = 2.0
margin_right = 299.0
margin_bottom = 22.0
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserListIcon" type="Sprite" parent="."]
position = Vector2( 358.339, 7.96342 )
texture = ExtResource( 1 )

[node name="UserList" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
margin_left = 352.0
margin_top = 18.8586
margin_right = 427.0
margin_bottom = 227.859
custom_fonts/font = SubResource( 1 )
text = "TheMuko
almighty_atlas
Ginger_Nerdy"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserListHeader" type="Label" parent="."]
margin_left = 351.0
margin_top = 4.85858
margin_right = 426.0
margin_bottom = 18.8586
custom_fonts/font = SubResource( 2 )
text = "Aktive Streamlinge (00):"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserListUpdateTimer" type="Timer" parent="."]
autostart = true

[node name="StreamlingSavedLabel" type="Label" parent="."]
margin_left = 91.3171
margin_top = 2.6727
margin_right = 330.317
margin_bottom = 20.6727
custom_fonts/font = SubResource( 3 )
text = "Streamlinge gerettet: X von X"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="UserListUpdateTimer" to="." method="_on_UserListUpdateTimer_timeout"]
